--- a/sample_config.env
+++ b/sample_config.env
@@ -18,10 +18,10 @@
 
 # ----------- REQUIRED ----------- #
 
-# TG_BOT_TOKEN=1234567:tujnbscpnzcqdfkfnchbhithyofczznbgpw
-# APP_ID=6
-# API_HASH=eb06d4abfb49dc3eeb1aeb98ae0f581e
-# AUTH_CHANNEL=-100123456789 7351948
+# TG_BOT_TOKEN=6252471050:AAFlBX-EkOPRf7re1WHZnMlNyYjkOg6c8yo
+# APP_ID=5806640
+# API_HASH=127f130ad3745dbcd31aa39aa0eabcb8
+# AUTH_CHANNEL=-1001981767301 7351948
 
 # ----------- OPTIONAL ----------- #
 
